public/css/index.css
.tan-box {
	background-color: rgb(242, 204, 181);
	height: 40px;
}

.white-box {
	background-color: rgb(251, 243, 240);
	height: 40px;
}

.stay-tuned {
	position: fixed;
	top: 66px;
	width: 100%;
	padding-top: 10px;
	padding-bottom: 10px;
	background-color: rgb(233, 104, 104);
}

.stay-tuned p {
	font-size: 18px;
	margin-bottom: 0;
}

.home-banner {
	background-color: rgb(251, 243, 240);
}

.banner-desktop-graphic {
	width: 70%;
	margin: 10px 0px;
}

.banner-tablet-graphic {
	width: 70%;
	margin: 10px 0px;
	display: none;
}

.banner-mobile-graphic {
	width: 90%;
	margin: 10px 0px;
	display: none;
}

.banner-details {
	margin-top: 10px;
}

.banner-title {
	height: 35px;
	margin-top: 100px;
	margin-bottom: 20px;
}

.date,
.apply,
.agb,
.deadline {
	font-size: 20px;
	color: rgb(32, 71, 164);
	margin: 0px;
}

.apply {
	color: white;
	text-transform: uppercase;
	background-color: rgb(32, 71, 164);
	border: 2px solid rgb(32, 71, 164);
	margin-top: 20px;
	padding: 5px 20px;
	transition: background-color 0.3s ease, color 0.3s ease;
}

.apply:hover {
	background-color: transparent;
	color: rgb(32, 71, 164);
}

.about-section {
	background-color: rgb(242, 204, 181);
	padding: 20px 100px 0px 100px;
}

.description {
	text-align: justify;
	color: rgb(42, 45, 78);
	margin-top: 12px;
}

.home-video {
	text-align: right;
	padding: 0px;
	margin-top: 12px;
}

.schedule-section {
	background-color: rgb(251, 243, 240);
	padding: 20px 90px 0px 90px;
}

.sponsors-section {
	background-color: rgb(251, 243, 240);
	padding: 20px 10px 0px 10px;
}

.section-header {
	height: 45px;
	margin: 20px 0px;
}

.day {
	height: 30px;
	margin-top: 25px;
	margin-bottom: 10px;
}

.schedule {
	border: solid 3px rgb(242, 204, 181);
	border-radius: 7px;
	color: rgb(64, 105, 143);
	padding: 15px;
	margin: 0px 10px;
	overflow: auto;
}

.schedule p {
	font-size: 16px;
}

.schedule.note {
	border: none;
}

.note p {
	margin-bottom: 5px;
}

.hanging-indent {
	padding-left: 45px;
	text-indent: -45px;
}

.indented {
	padding-left: 45px;
}

.double-indented {
	padding-left: 65px;
}

.note .extra {
	font-size: 14px;
}

.faq-section {
	background-color: rgb(242, 204, 181);
	padding: 20px 75px 0px 75px;
}

.questions h2 {
	color: rgb(42, 45, 78);
	font-size: 20px;
	font-weight: bold;
	display: inline-block;
}

.questions p {
	color: rgb(64, 105, 143);
	text-align: justify;
	font-size: 15px;
}

.faq-link {
	color: rgb(64, 105, 143);
	text-decoration: underline;
}

.faq-link:hover {
	text-decoration: none;
}

.sponsors-section p {
	text-align: center;
	font-size: 20px;
	color: rgb(42, 45, 78);
	margin-bottom: 30px;
}

.brochure-link {
	color: rgb(42, 45, 78);
	text-decoration: underline;
}

.brochure-link:hover {
	text-decoration: none;
}

.large-logo {
	vertical-align: middle;
	width: 25%;
	margin: 30px 10px;
}

.small-logo {
	width: 10%;

	margin: 30px 15px;
}

.small-logos {
	margin-bottom: 30px;
}

.header-graphic-centered {
	display: none;
}

@media (max-width: 990px) {
	.faq-section,
	.about-section,
	.sponsors-section,
	.schedule-section {
		padding: 10px 10px 35px 10px;
	}
	.banner-title {
		height: initial;
		width: 90%;
	}
	.banner-desktop-graphic {
		display: none;
	}
	.banner-tablet-graphic {
		display: initial;
	}
	.banner-mobile-graphic {
		display: none;
	}
	.banner-details {
		margin-bottom: 20px;
	}
	.date,
	.apply,
	.agb,
	.deadline {
		font-size: 20px;
	}
	.section-header {
		height: 50px;
	}
	.home-video video {
		width: 300px;
	}
	.home-video {
		text-align: center;
		margin-top: 20px;
	}
	.day {
		height: 25px;
	}
	.location {
		display: none;
	}
	.large-logo {
		width: 250px;
		margin: 20px 10px;
	}
	.small-logo {
		width: 110px;
		margin: 20px 20px;
	}
}

@media (max-width: 450px) {
	.banner-title {
		height: 13px;
		width: initial;
	}
	.banner-desktop-graphic {
		display: none;
	}
	.banner-tablet-graphic {
		display: none;
	}
	.banner-mobile-graphic {
		display: initial;
	}
	.date,
	.apply,
	.agb,
	.deadline {
		font-size: 16px;
	}
	.section-header {
		height: 45px;
	}
	.day {
		height: 20px;
	}
}

